--- a/araw.html
+++ b/araw.html
@@ -33,6 +33,7 @@
     </header>
 
     <main>
+
         <section class="project-hero">
             <div class="image-wrapper-fullwidth-cover">
                 <img src="img/webp/combined-sunscreen.webp" alt="placeholder" width="1920" height="1080" />
@@ -55,16 +56,21 @@
                         <h2 class="p-top">Enjoy safe, gentle sun protection for all skin types, from babies to adults, with a commitment to sustainability.</h2>
 
                         <h5>The Challenge</h5>
-                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, dicta.</h3>
+                        <h3>How can you create brand elements for a sustainable sunscreen brand?</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus nulla accusantium temporibus natus magni sit tempora magnam veritatis, quae architecto odio quos totam quisquam quod ducimus sed repudiandae, vitae harum sequi voluptatum placeat iure. Inventore ut corrupti dolor, quaerat voluptatibus necessitatibus deserunt harum perferendis, dolorem blanditiis voluptatum culpa, a ipsum error modi. Quam vitae a inventore pariatur dolore quae provident adipisci ex omnis iusto incidunt enim rem ea, voluptas voluptates itaque! Nesciunt, officia tempora. Vitae reiciendis porro at magnam pariatur!</p>
                     </div>
                 </div>
             </div>
-
             </section>
+
 
             <section class="araw-container">
                 <div class="project-grid">
+                    <div class="project-card">
+                        <img src="img/png/araw-black-logo.png" alt="Project 2" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
                     <div class="project-card full-width">
                         <img src="img/webp/adult-sunscreen.webp" alt="Project 2" class="project-image">
                         <div class="project-overlay">
