--- a/cinqueterre.html
+++ b/cinqueterre.html
@@ -42,7 +42,6 @@
 
         <div class="container wide">
             <div class="row intro">
-
                 <div class="one-fourth">
                     <ul class="project-meta-list">
                         <li><strong class="caps">Client:</strong> Student Project</li>
@@ -51,7 +50,7 @@
                     </ul>
                 </div>
 
-                <div class="col-9 push-2">
+                <div class="three-fourths">
                     <div class="container-content">
                         <h2 class="p-top">Uncover the <i>charm</i> of Cinque Terre, where vibrant villages meet breathtaking cliffs and the Ligurian Sea, creating an unforgettable Italian escape.</h2>
 
@@ -65,12 +64,14 @@
 
         </section>
 
+
+
+
         <section class="cinqueterre-container">
             <div class="project-grid">
                 <div class="project-card full-width">
                     <img src="img/webp/postage.webp" alt="Project 1" class="project-image">
                     <div class="project-overlay">
-
                     </div>
                 </div>
                 <div class="project-card">
@@ -88,8 +89,13 @@
                     <div class="project-overlay">
                     </div>
                 </div>
+
+            </div>
             </div>
         </section>
+
+        <section class="other-projects">View Other Projects</section>
+
     </main>
 
 
