--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h2 class="works-heading">Projects</h2>
             <section class="works-grid">
                 <div class="works-project">
-                    <a href="cinqueterre.html"><img class="ocard-image" src="img/webp/cinqueterre-black-transparent.webp" alt="Cinque Terre Logo" width="1920" height="1800">
+                    <a href="cinqueterre.html"><img class="ocard-image" src="img/png/cinque-terre-logo-w-bg.png" alt="Cinque Terre Logo" width="1920" height="1800">
                     </a>
                     <p>Cinque Terre</p>
                 </div>
@@ -84,7 +84,7 @@
                     <p>Charles and Rae Eames Editorial</p>
                 </div>
                 <div class="works-project">
-                    <img src="image3.jpg" alt="Image 3">
+                    <img src="img/png/krishna-cow-logo-w-bg.png" alt="Image 3">
                     <p>Krishna Cow Sanctuary</p>
                 </div>
                 <div class="works-project">
