--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <p>Cinque Terre</p>
                 </div>
                 <div class="works-project">
-                    <img src="image2.jpg" alt="Image 2">
+                    <a href="charlesandrayeames.html"></a><img src="image2.jpg" alt="Image 2">
                     <p>Charles and Rae Eames Editorial</p>
                 </div>
                 <div class="works-project">
