made changes to work page

--- a/charlesandrayeames.html
+++ b/charlesandrayeames.html
@@ -36,7 +36,7 @@
 
         <section class="project-hero">
             <div class="image-wrapper-fullwidth-cover">
-                <img src="img/webp/combined-sunscreen.webp" alt="placeholder" width="1920" height="1080" />
+                <img src="https://placehold.co/600x400" alt="placeholder" width="1920" height="1080" />
             </div>
         </section>
 
@@ -67,7 +67,7 @@
             <section class="araw-container">
                 <div class="project-grid">
                     <div class="project-card">
-                        <img src="img/png/araw-black-logo.png" alt="Project 2" class="project-image">
+                        <img src="https://placehold.co/600x400" alt="Project 2" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
