added content in subpages

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 
 <body>
     <header>
-        <div class="site-header">
-            <h3><a href="index.html">AP</a></h3>
+        <div class="site-logo">
+            <a href="index.html">
+                <img src="img/png/portfolio-logo.png" alt="Site Base Logo" width="70" height="70">
+            </a>
         </div>
         <nav class="site-nav">
             <ul>
@@ -36,7 +38,16 @@
 
     <main>
         <section class="hero">
-            <h2>Angelica Palilio</h2>
+            <h2>
+                Designing with
+                <span>
+                    <span>purpose</span>
+                    <span>passion</span>
+                    <span>progress</span>
+                    <span>perspective</span>
+                    <span>personality</span>
+                </span>
+            </h2>
 
             <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, nihil doloremque id tempora tenetur odit vel totam magni aut expedita rem fugiat, voluptate veniam officia adipisci at magnam quisquam eos a accusamus quasi et sed eaque necessitatibus? </p> -->
 
@@ -57,7 +68,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="ocard" data-index="0">
+                <!-- <div class="ocard" data-index="0">
                     <div class="inner-ocard">
                         <div class="ocard-image-container">
                             <a href="araw.html"><img class="ocard-image" src="img/webp/mug.webp" alt="The Resting Mug" width="1920" height="1280">
@@ -66,46 +77,88 @@
                         </div>
 
                     </div>
-                </div>
+                </div> -->
             </div>
 
         </section>
 
         <section class="works" id="works">
             <h2 class="works-heading">Projects</h2>
-            <section class="works-grid">
+            <div class="works-grid">
                 <div class="works-project">
-                    <a href="cinqueterre.html"><img class="ocard-image" src="img/png/cinque-terre-logo-w-bg.png" alt="Cinque Terre Logo" width="1920" height="1800">
+                    <a href="cinqueterre.html"><img class="ocard-image" src="img/webp/cinque-terre-logo-w-bg.webp" alt="Cinque Terre Logo" width="1920" height="1800">
                     </a>
                     <p>Cinque Terre</p>
                 </div>
                 <div class="works-project">
+                    <img src="img/webp/krishna-cow-logo-w-bg.webp" alt="Image 3">
+                    <p>Krishna Cow Sanctuary</p>
+                </div>
+                <!-- <div class="works-project">
                     <a href="charlesandrayeames.html"><img src="image2.jpg" alt="Image 2">
                     </a>
                     <p>Charles and Rae Eames Editorial</p>
-                </div>
-                <div class="works-project">
-                    <img src="img/png/krishna-cow-logo-w-bg.png" alt="Image 3">
-                    <p>Krishna Cow Sanctuary</p>
-                </div>
-                <div class="works-project">
+                </div> -->
+
+                <!-- <div class="works-project">
                     <img src="image4.jpg" alt="Image 4">
                     <p>Boozi Hard Seltzer</p>
-                </div>
-            </section>
+                </div> -->
+            </div>
         </section>
 
     </main>
 
-    <footer>
-        <nav class="social-nav">
-            <ul class="icon">
-                <li><a href="#works">Works</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
-        </nav>
+    <footer class="site-footer">
+
+        <div class="row">
+            <div class="one-half column">
+                <div class="work">
+                    <div>
+                        <div class="eyebrow"> <strong>Projects</strong></div>
+
+                        <ul class="worknav">
+                            <li><a href="araw.html">Araw</a></li>
+                            <!-- <li><a href="#">The Resting Mug</a></li> -->
+                            <li><a href="cinqueterre.html">Cinque Terre</a></li>
+                            <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
+                            <li><a href="#">Krishna Cow Sanctuary</a></li>
+                            <!-- <li><a href="#">Boozi Hard Seltzer</a></li> -->
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="one-third column">
+                <ul class="footer-tags">
+
+                    <li><a href="index.html">home</a></li>
+
+                    <li><a href="about.html">about</a></li>
+
+                    <li><a href="#">linkedin</a></li>
+
+                    <li><a href="#">email</a></li>
+
+                </ul>
+
+            </div>
+
+        </div>
+
+        <hr>
+
+        <div class="legal">
+
+            <p>&copy; 2025 Angelica Palilio. All Rights Reserved </p>
+
+            <div class="legal-links">
+
+            </div>
+
+        </div>
 
     </footer>
+
     <!-- OVERLAPING CARD JS -->
     <script src="js/aat.min.js"></script>
 
