--- a/araw.html
+++ b/araw.html
@@ -19,8 +19,10 @@
 
 <body>
     <header>
-        <div class="site-id">
-            <h3><a href="index.html">AP</a></h3>
+        <div class="site-logo">
+            <a href="index.html">
+                <img src="img/png/portfolio-logo.png" alt="Site Base Logo" width="70" height="70">
+            </a>
         </div>
         <nav class="site-nav">
             <ul>
@@ -63,14 +65,66 @@
             </div>
             </section>
 
+            <section>
+                <div class="araw-processs">
+                    <div class="row">
+                        <div class="one-half">
+                            <div class="process">
+                                <img src="img/png/araw-black-logo.png" alt="">
+                            </div>
+                        </div>
+
+                        <div class="one-half">
+                            <div class="process">
+                                <!-- <img src="img/svg/araw-color-palette.svg" alt=""> -->
+                                <h2 class="logo-description">What is Araw?</h2>
+
+                                <p>Araw (Ah-rao) is a sunscreen brand that uses simple ingriedients and sustainable packaging to not only keep your skin protected but it is also safe to natural bodies of water and its ecosystems.
+                                </p>
+
+                            </div>
+                        </div>
+
+
+                        <div class="one-half">
+                            <div class="process">
+                                <!-- <img src="img/svg/araw-color-palette.svg" alt=""> -->
+                                <h2 class="logo-description">Brand Assets</h2>
+
+                                <p>For my brand assets, I took a step away from digital work to explore a more organic approach in shaping the otter’s head. I experimented with ink droplets on paper until I found the perfect one. Once I identified the ideal design, I scanned it into the computer and fine-tuned the details. The ink droplet became a key element, appearing both as the sun in the adult sunscreen and as the otter in the baby sunscreen.
+
+                                    For the adult sunscreen, I aimed to make the sun as realistic as possible. To capture its dark spots and texture, I used my fingers to paint and create fingerprints, which I then incorporated into the design to produce the natural lines and shadows that make the sun feel dynamic.
+                                </p>
+
+                            </div>
+                        </div>
+                        <div class="one-half">
+                            <div class="process">
+                                <img src="img/webp/araw-brand-assets.webp" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- <section>
+                <div class="row">
+                    <div class="one-half">
+                        <div class="process">
+                            <img src="img/webp/araw-brand-assets.webp" alt="">
+                        </div>
+                    </div>
+                </div> -->
+
+            </section>
 
             <section class="araw-container">
                 <div class="project-grid">
-                    <div class="project-card">
+                    <!-- <div class="project-card">
                         <img src="img/png/araw-black-logo.png" alt="Project 2" class="project-image">
                         <div class="project-overlay">
                         </div>
-                    </div>
+                    </div> -->
                     <div class="project-card full-width">
                         <img src="img/webp/adult-sunscreen.webp" alt="Project 2" class="project-image">
                         <div class="project-overlay">
@@ -87,23 +141,64 @@
                         <div class="project-overlay">
                         </div>
                     </div>
-                    <div class="project-card full-width">
+                    <!-- <div class="project-card full-width">
                         <img src="https://placehold.co/600x400" alt="Project 4" class="project-image">
                         <div class="project-overlay">
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </section>
     </main>
 
 
-    <footer>
-        <nav class="social-nav">
-            <ul class="icon">
-                <li><a href="/index.html">Works</a></li>
-                <li><a href="/about.html">About</a></li>
-            </ul>
-        </nav>
+    <footer class="site-footer">
+
+        <div class="row">
+            <div class="one-half column">
+                <div class="work">
+                    <div>
+                        <div class="eyebrow"> <strong>Projects</strong></div>
+
+                        <ul class="worknav">
+                            <li><a href="araw.html">Araw</a></li>
+                            <!-- <li><a href="#">The Resting Mug</a></li> -->
+                            <li><a href="cinqueterre.html">Cinque Terre</a></li>
+                            <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
+                            <li><a href="#">Krishna Cow Sanctuary</a></li>
+                            <!-- <li><a href="#">Boozi Hard Seltzer</a></li> -->
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="one-third column">
+                <ul class="footer-tags">
+
+                    <li><a href="index.html">home</a></li>
+
+                    <li><a href="about.html">about</a></li>
+
+                    <li><a href="#">linkedin</a></li>
+
+                    <li><a href="#">email</a></li>
+
+                </ul>
+
+            </div>
+
+        </div>
+
+        <hr>
+
+        <div class="legal">
+
+            <p>&copy; 2025 Angelica Palilio. All Rights Reserved </p>
+
+            <div class="legal-links">
+
+            </div>
+
+        </div>
+
     </footer>
     <!-- OVERLAPING CARD JS -->
     <script src="js/aat.min.js"></script>
