--- a/cinqueterre.html
+++ b/cinqueterre.html
@@ -19,8 +19,10 @@
 
 <body>
     <header>
-        <div class="site-id">
-            <h3><a href="index.html">AP</a></h3>
+        <div class="site-logo">
+            <a href="index.html">
+                <img src="img/png/portfolio-logo.png" alt="Site Base Logo" width="70" height="70">
+            </a>
         </div>
         <nav class="site-nav">
             <ul>
@@ -84,28 +86,69 @@
                     <div class="project-overlay">
                     </div>
                 </div>
-                <div class="project-card full-width">
+                <!-- <div class="project-card full-width">
                     <img src="https://placehold.co/600x400" alt="Project 4" class="project-image">
                     <div class="project-overlay">
                     </div>
-                </div>
+                </div> -->
 
             </div>
             </div>
         </section>
 
-        <section class="other-projects">View Other Projects</section>
+        <!-- <section class="other-projects">View Other Projects</section> -->
 
     </main>
 
 
-    <footer>
-        <nav class="social-nav">
-            <ul class="icon">
-                <li><a href="/index.html">Works</a></li>
-                <li><a href="/about.html">About</a></li>
-            </ul>
-        </nav>
+    <footer class="site-footer">
+
+        <div class="row">
+            <div class="one-half column">
+                <div class="work">
+                    <div>
+                        <div class="eyebrow"> <strong>Projects</strong></div>
+
+                        <ul class="worknav">
+                            <li><a href="araw.html">Araw</a></li>
+                            <!-- <li><a href="#">The Resting Mug</a></li> -->
+                            <li><a href="cinqueterre.html">Cinque Terre</a></li>
+                            <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
+                            <li><a href="#">Krishna Cow Sanctuary</a></li>
+                            <!-- <li><a href="#">Boozi Hard Seltzer</a></li> -->
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="one-third column">
+                <ul class="footer-tags">
+
+                    <li><a href="index.html">home</a></li>
+
+                    <li><a href="about.html">about</a></li>
+
+                    <li><a href="#">linkedin</a></li>
+
+                    <li><a href="#">email</a></li>
+
+                </ul>
+
+            </div>
+
+        </div>
+
+        <hr>
+
+        <div class="legal">
+
+            <p>&copy; 2025 Angelica Palilio. All Rights Reserved </p>
+
+            <div class="legal-links">
+
+            </div>
+
+        </div>
+
     </footer>
     <!-- OVERLAPING CARD JS -->
     <script src="js/aat.min.js"></script>
