trying to added assets

--- a/araw.html
+++ b/araw.html
@@ -92,9 +92,8 @@
                                 <h2 class="logo-description">Brand Assets</h2>
 
                                 <p>For my brand assets, I took a step away from digital work to explore a more organic approach in shaping the otter’s head. I experimented with ink droplets on paper until I found the perfect one. Once I identified the ideal design, I scanned it into the computer and fine-tuned the details. The ink droplet became a key element, appearing both as the sun in the adult sunscreen and as the otter in the baby sunscreen.
-
-                                    For the adult sunscreen, I aimed to make the sun as realistic as possible. To capture its dark spots and texture, I used my fingers to paint and create fingerprints, which I then incorporated into the design to produce the natural lines and shadows that make the sun feel dynamic.
                                 </p>
+                                <p> For the adult sunscreen, I aimed to make the sun as realistic as possible. To capture its dark spots and texture, I used my fingers to paint and create fingerprints, which I then incorporated into the design to produce the natural lines and shadows that make the sun feel dynamic.</p>
 
                             </div>
                         </div>
@@ -105,8 +104,19 @@
                         </div>
                     </div>
                 </div>
-            </section>
 
+
+            </section>
+            <section>
+                <div class="row assets">
+                    <div class="one-sixth"><img src="img/svg/araw-black-logo.svg" alt=""></div>
+                    <div class="one-sixth"><img src="img/svg/araw-supporting-assets-42.svg" alt=""></div>
+                    <div class="one-sixth"><img src="img/svg/araw-supporting-assets-43.svg" alt=""></div>
+                    <div class="one-sixth"><img src="img/svg/araw-supporting-assets-44.svg" alt=""></div>
+                    <div class="one-sixth"><img src="img/svg/araw-supporting-assets-45.svg" alt=""></div>
+                    <div class="one-sixth"><img src="img/svg/araw-supporting-assets-46.svg" alt=""></div>
+                </div>
+            </section>
             <!-- <section>
                 <div class="row">
                     <div class="one-half">
