made edits to Araw subpage

--- a/about.html
+++ b/about.html
@@ -36,6 +36,7 @@
 
     <main>
         <h2>About Me</h2>
+        <p>Hi I am Angelica and I am a Graphic Designer </p>
     </main>
 
     <footer class="site-footer">
@@ -50,7 +51,7 @@
                             <li><a href="araw.html">Araw</a></li>
                             <!-- <li><a href="#">The Resting Mug</a></li> -->
                             <li><a href="cinqueterre.html">Cinque Terre</a></li>
-                            <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
+                            <!-- <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li> -->
                             <li><a href="#">Krishna Cow Sanctuary</a></li>
                             <!-- <li><a href="#">Boozi Hard Seltzer</a></li> -->
                         </ul>
