--- a/araw.html
+++ b/araw.html
@@ -66,11 +66,11 @@
             </section>
 
             <section>
-                <div class="araw-processs">
+                <div class="araw-process">
                     <div class="row">
                         <div class="one-half">
-                            <div class="process">
-                                <img src="img/png/araw-black-logo.png" alt="">
+                            <div class="process araw-padding">
+                                <img src="img/png/araw-black-logo-resized.png" alt="">
                             </div>
                         </div>
 
@@ -104,19 +104,23 @@
                         </div>
                     </div>
                 </div>
-
-
             </section>
             <section>
-                <div class="row assets">
-                    <div class="one-sixth"><img src="img/svg/araw-black-logo.svg" alt=""></div>
-                    <div class="one-sixth"><img src="img/svg/araw-supporting-assets-42.svg" alt=""></div>
-                    <div class="one-sixth"><img src="img/svg/araw-supporting-assets-43.svg" alt=""></div>
-                    <div class="one-sixth"><img src="img/svg/araw-supporting-assets-44.svg" alt=""></div>
-                    <div class="one-sixth"><img src="img/svg/araw-supporting-assets-45.svg" alt=""></div>
-                    <div class="one-sixth"><img src="img/svg/araw-supporting-assets-46.svg" alt=""></div>
+                <div class="container">
+                    <!-- need to fix mobile -->
+                    <div class="assets">
+                        <div class="one-sixth"><img src="img/svg/araw-supporting-assets-41.svg" alt=""></div>
+                        <div class="one-sixth"><img src="img/svg/araw-supporting-assets-42.svg" alt=""></div>
+                        <div class="one-sixth"><img src="img/svg/araw-supporting-assets-43.svg" alt=""></div>
+                        <div class="one-sixth"><img src="img/svg/araw-supporting-assets-44.svg" alt=""></div>
+                        <div class="one-sixth"><img src="img/svg/araw-supporting-assets-45.svg" alt=""></div>
+                        <div class="one-sixth"><img src="img/svg/araw-supporting-assets-46.svg" alt=""></div>
+                    </div>
+
+                    <p class="center">Supporting Emblems</p>
                 </div>
             </section>
+
             <!-- <section>
                 <div class="row">
                     <div class="one-half">
@@ -173,7 +177,7 @@
                             <li><a href="araw.html">Araw</a></li>
                             <!-- <li><a href="#">The Resting Mug</a></li> -->
                             <li><a href="cinqueterre.html">Cinque Terre</a></li>
-                            <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
+                            <!-- <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li> -->
                             <li><a href="#">Krishna Cow Sanctuary</a></li>
                             <!-- <li><a href="#">Boozi Hard Seltzer</a></li> -->
                         </ul>
