--- a/cinqueterre.html
+++ b/cinqueterre.html
@@ -113,7 +113,7 @@
                             <li><a href="araw.html">Araw</a></li>
                             <!-- <li><a href="#">The Resting Mug</a></li> -->
                             <li><a href="cinqueterre.html">Cinque Terre</a></li>
-                            <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
+                            <!-- <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li> -->
                             <li><a href="#">Krishna Cow Sanctuary</a></li>
                             <!-- <li><a href="#">Boozi Hard Seltzer</a></li> -->
                         </ul>
