made edits to portfolio

--- a/charlesandrayeames.html
+++ b/charlesandrayeames.html
@@ -38,7 +38,7 @@
 
         <section class="project-hero">
             <div class="image-wrapper-fullwidth-cover">
-                <img src="https://placehold.co/600x400" alt="placeholder" width="1920" height="1080" />
+                <img src="img/webp/eames-chair.webp" alt="placeholder" width="1920" height="1080" />
             </div>
         </section>
 
@@ -55,43 +55,34 @@
 
                 <div class="three-fourths">
                     <div class="container-content">
-                        <h2 class="p-top">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet harum id maxime. Error soluta perferendis eaque, quas tenetur at provident adipisci, ducimus, amet ullam fugit.</h2>
+                        <h2 class="p-top">Creating a variety of visually engaging layouts that captivate the eye and draw attention to every detail.
+                        </h2>
 
                         <h5>The Challenge</h5>
                         <h3>How can you create multiple layouts using the same content?</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus nulla accusantium temporibus natus magni sit tempora magnam veritatis, quae architecto odio quos totam quisquam quod ducimus sed repudiandae, vitae harum sequi voluptatum placeat iure. Inventore ut corrupti dolor, quaerat voluptatibus necessitatibus deserunt harum perferendis, dolorem blanditiis voluptatum culpa, a ipsum error modi. Quam vitae a inventore pariatur dolore quae provident adipisci ex omnis iusto incidunt enim rem ea, voluptas voluptates itaque! Nesciunt, officia tempora. Vitae reiciendis porro at magnam pariatur!</p>
+                        <p>To create a functional layout with the same content, I experimented with the placement of images to ensure they were visually appealing and well-suited for the page. I also adjusted the weights of the typefaces to achieve a balanced and effective design.</p>
                     </div>
                 </div>
             </div>
             </section>
 
 
-            <section class="araw-container">
+            <section class="eames-container">
                 <div class="project-grid">
                 </div>
-                <div class="project-card full-width">
+                <div class="project-card full-width img-spacer">
                     <img src="img/webp/eames1.webp" alt="Project 2" class="project-image">
                     <div class="project-overlay">
 
                     </div>
                 </div>
-                <div class="project-card full-width">
+                <div class="project-card full-width img-spacer">
                     <img src="img/webp/eames2.webp" alt="Project 2" class="project-image">
                     <div class="project-overlay">
 
                     </div>
                 </div>
-                <!-- <div class="project-card">
-                    <img src="img/webp/facestick.webp" alt="Project 2" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-                <div class="project-card">
-                    <img src="img/webp/baby-sunscreen.webp" alt="Project 3" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div> -->
-                <div class="project-card full-width">
+                <div class="project-card full-width img-spacer">
                     <img src="img/webp/eames3.webp" alt="Project 4" class="project-image">
                     <div class="project-overlay">
                     </div>
@@ -103,29 +94,37 @@
 
     <footer class="site-footer">
 
+
+        <div class="eyebrow"> <strong>Projects</strong></div>
+
         <div class="row">
-            <div class="one-half column">
+            <div class="one-third column">
                 <div class="work">
                     <div>
-                        <div class="eyebrow"> <strong>Projects</strong></div>
 
-                        <ul class="worknav">
+                        <ul class="footer-worknav">
                             <li><a href="araw.html">Araw</a></li>
-                            <li><a href="#">The Resting Mug</a></li>
+                            <!-- <li><a href="#">The Resting Mug</a></li> -->
                             <li><a href="cinqueterre.html">Cinque Terre</a></li>
                             <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
-                            <li><a href="#">Krishna Cow Sanctuary</a></li>
-                            <li><a href="#">Boozi Hard Seltzer</a></li>
+                            <!-- <li><a href="#">Krishna Cow Sanctuary</a></li> -->
+                            <!-- <li><a href="#">Boozi Hard Seltzer</a></li> -->
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="one-third column">
-                <ul class="footer-tags">
+                <ul class="footer-pagenav">
 
                     <li><a href="index.html">home</a></li>
 
                     <li><a href="about.html">about</a></li>
+
+                </ul>
+
+            </div>
+            <div class="one-third column">
+                <ul class="footer-socialnav">
 
                     <li><a href="#">linkedin</a></li>
 
@@ -136,8 +135,6 @@
             </div>
 
         </div>
-
-        <hr>
 
         <div class="legal">
 
