--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         <nav class="site-nav">
             <ul>
 
-                <li><a href="/index.html">Work</a></li>
+                <li><a href="/index.html">Works</a></li>
                 <li><a href="/about.html">About</a></li>
 
             </ul>
@@ -35,35 +35,56 @@
     </header>
 
     <main>
-        <h2>About Me</h2>
-        <p>Hi I am Angelica and I am a Graphic Designer </p>
+        <section class="about">
+
+
+            </div>
+            <div class="one-half">
+                <h2>About Me</h2>
+
+                <p>Hello, I'm Angelica and I am a <i></i>graphic designer</i> based in <strong>Honolulu, Hawaii.</strong>
+
+
+                    On my free time, I love going to the beach and watching the sunset, staying in and baking or cooking while having my favorite shows play in the background, as well as reading.</p>
+
+            </div>
+
+        </section>
     </main>
 
     <footer class="site-footer">
 
+
+        <div class="eyebrow"> <strong>Projects</strong></div>
+
         <div class="row">
-            <div class="one-half column">
+            <div class="one-third column">
                 <div class="work">
                     <div>
-                        <div class="eyebrow"> <strong>Projects</strong></div>
 
-                        <ul class="worknav">
+                        <ul class="footer-worknav">
                             <li><a href="araw.html">Araw</a></li>
                             <!-- <li><a href="#">The Resting Mug</a></li> -->
                             <li><a href="cinqueterre.html">Cinque Terre</a></li>
-                            <!-- <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li> -->
-                            <li><a href="#">Krishna Cow Sanctuary</a></li>
+                            <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
+                            <!-- <li><a href="#">Krishna Cow Sanctuary</a></li> -->
                             <!-- <li><a href="#">Boozi Hard Seltzer</a></li> -->
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="one-third column">
-                <ul class="footer-tags">
+                <ul class="footer-pagenav">
 
                     <li><a href="index.html">home</a></li>
 
                     <li><a href="about.html">about</a></li>
+
+                </ul>
+
+            </div>
+            <div class="one-third column">
+                <ul class="footer-socialnav">
 
                     <li><a href="#">linkedin</a></li>
 
@@ -74,8 +95,6 @@
             </div>
 
         </div>
-
-        <hr>
 
         <div class="legal">
 
