--- a/araw.html
+++ b/araw.html
@@ -59,7 +59,7 @@
 
                         <h5>The Challenge</h5>
                         <h3>How can you create brand elements for a sustainable sunscreen brand?</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus nulla accusantium temporibus natus magni sit tempora magnam veritatis, quae architecto odio quos totam quisquam quod ducimus sed repudiandae, vitae harum sequi voluptatum placeat iure. Inventore ut corrupti dolor, quaerat voluptatibus necessitatibus deserunt harum perferendis, dolorem blanditiis voluptatum culpa, a ipsum error modi. Quam vitae a inventore pariatur dolore quae provident adipisci ex omnis iusto incidunt enim rem ea, voluptas voluptates itaque! Nesciunt, officia tempora. Vitae reiciendis porro at magnam pariatur!</p>
+                        <p>To create brand elements for a sustainable sunscreen, I did research on the ingredients that are used in the sunscreen. I also research ideas on what protection means and sketched out ideas to that could symbolize protection. s</p>
                     </div>
                 </div>
             </div>
@@ -81,6 +81,7 @@
 
                                 <p>Araw (Ah-rao) is a sunscreen brand that uses simple ingriedients and sustainable packaging to not only keep your skin protected but it is also safe to natural bodies of water and its ecosystems.
                                 </p>
+                                <img src="img/svg/araw-color-palette-horizontal.svg" alt="">
 
                             </div>
                         </div>
@@ -108,6 +109,7 @@
             <section>
                 <div class="container">
                     <!-- need to fix mobile -->
+                    <p class="center">Supporting Emblems</p>
                     <div class="assets">
                         <div class="one-sixth"><img src="img/svg/araw-supporting-assets-41.svg" alt=""></div>
                         <div class="one-sixth"><img src="img/svg/araw-supporting-assets-42.svg" alt=""></div>
@@ -117,7 +119,19 @@
                         <div class="one-sixth"><img src="img/svg/araw-supporting-assets-46.svg" alt=""></div>
                     </div>
 
-                    <p class="center">Supporting Emblems</p>
+
+                </div>
+            </section>
+
+            <section class="packaging">
+                <div class="container">
+                    <h3>Packaging Template</h3>
+                    <div class="row">
+                        <div class="one-third"><img src="img/gif/face-stick.gif" alt=""></div>
+                        <div class="one-third"><img src="img/gif/baby.gif" alt=""></div>
+                        <div class="one-third"><img src="img/gif/adult-sunscreen.gif" alt=""></div>
+
+                    </div>
                 </div>
             </section>
 
@@ -167,29 +181,37 @@
 
     <footer class="site-footer">
 
+
+        <div class="eyebrow"> <strong>Projects</strong></div>
+
         <div class="row">
-            <div class="one-half column">
+            <div class="one-third column">
                 <div class="work">
                     <div>
-                        <div class="eyebrow"> <strong>Projects</strong></div>
 
-                        <ul class="worknav">
+                        <ul class="footer-worknav">
                             <li><a href="araw.html">Araw</a></li>
                             <!-- <li><a href="#">The Resting Mug</a></li> -->
                             <li><a href="cinqueterre.html">Cinque Terre</a></li>
-                            <!-- <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li> -->
-                            <li><a href="#">Krishna Cow Sanctuary</a></li>
+                            <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
+                            <!-- <li><a href="#">Krishna Cow Sanctuary</a></li> -->
                             <!-- <li><a href="#">Boozi Hard Seltzer</a></li> -->
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="one-third column">
-                <ul class="footer-tags">
+                <ul class="footer-pagenav">
 
                     <li><a href="index.html">home</a></li>
 
                     <li><a href="about.html">about</a></li>
+
+                </ul>
+
+            </div>
+            <div class="one-third column">
+                <ul class="footer-socialnav">
 
                     <li><a href="#">linkedin</a></li>
 
@@ -200,8 +222,6 @@
             </div>
 
         </div>
-
-        <hr>
 
         <div class="legal">
 
