--- a/cinqueterre.html
+++ b/cinqueterre.html
@@ -103,29 +103,37 @@
 
     <footer class="site-footer">
 
+
+        <div class="eyebrow"> <strong>Projects</strong></div>
+
         <div class="row">
-            <div class="one-half column">
+            <div class="one-third column">
                 <div class="work">
                     <div>
-                        <div class="eyebrow"> <strong>Projects</strong></div>
 
-                        <ul class="worknav">
+                        <ul class="footer-worknav">
                             <li><a href="araw.html">Araw</a></li>
                             <!-- <li><a href="#">The Resting Mug</a></li> -->
                             <li><a href="cinqueterre.html">Cinque Terre</a></li>
-                            <!-- <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li> -->
-                            <li><a href="#">Krishna Cow Sanctuary</a></li>
+                            <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
+                            <!-- <li><a href="#">Krishna Cow Sanctuary</a></li> -->
                             <!-- <li><a href="#">Boozi Hard Seltzer</a></li> -->
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="one-third column">
-                <ul class="footer-tags">
+                <ul class="footer-pagenav">
 
                     <li><a href="index.html">home</a></li>
 
                     <li><a href="about.html">about</a></li>
+
+                </ul>
+
+            </div>
+            <div class="one-third column">
+                <ul class="footer-socialnav">
 
                     <li><a href="#">linkedin</a></li>
 
@@ -136,8 +144,6 @@
             </div>
 
         </div>
-
-        <hr>
 
         <div class="legal">
 
