--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </section>
 
         <section class="featured-works">
-            <h2 class="featured-works-heading">Featured Projects</h2>
+            <h2 class="featured-works-heading">Featured Project</h2>
             <div class="overlapping-cards">
                 <div class="ocard" data-index="0">
                     <div class="inner-ocard">
@@ -90,15 +90,15 @@
                     </a>
                     <p>Cinque Terre</p>
                 </div>
-                <div class="works-project">
+                <!-- <div class="works-project">
                     <img src="img/webp/krishna-cow-logo-w-bg.webp" alt="Image 3">
                     <p>Krishna Cow Sanctuary</p>
-                </div>
-                <!-- <div class="works-project">
-                    <a href="charlesandrayeames.html"><img src="image2.jpg" alt="Image 2">
+                </div> -->
+                <div class="works-project light">
+                    <a href="charlesandrayeames.html"><img src="img/webp/eames-cover-photo.webp" alt="Image 2">
                     </a>
                     <p>Charles and Rae Eames Editorial</p>
-                </div> -->
+                </div>
 
                 <!-- <div class="works-project">
                     <img src="image4.jpg" alt="Image 4">
@@ -111,29 +111,37 @@
 
     <footer class="site-footer">
 
+
+        <div class="eyebrow"> <strong>Projects</strong></div>
+
         <div class="row">
-            <div class="one-half column">
+            <div class="one-third column">
                 <div class="work">
                     <div>
-                        <div class="eyebrow"> <strong>Projects</strong></div>
 
-                        <ul class="worknav">
+                        <ul class="footer-worknav">
                             <li><a href="araw.html">Araw</a></li>
                             <!-- <li><a href="#">The Resting Mug</a></li> -->
                             <li><a href="cinqueterre.html">Cinque Terre</a></li>
                             <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
-                            <li><a href="#">Krishna Cow Sanctuary</a></li>
+                            <!-- <li><a href="#">Krishna Cow Sanctuary</a></li> -->
                             <!-- <li><a href="#">Boozi Hard Seltzer</a></li> -->
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="one-third column">
-                <ul class="footer-tags">
+                <ul class="footer-pagenav">
 
                     <li><a href="index.html">home</a></li>
 
                     <li><a href="about.html">about</a></li>
+
+                </ul>
+
+            </div>
+            <div class="one-third column">
+                <ul class="footer-socialnav">
 
                     <li><a href="#">linkedin</a></li>
 
@@ -144,8 +152,6 @@
             </div>
 
         </div>
-
-        <hr>
 
         <div class="legal">
 
