--- a/cinqueterre.html
+++ b/cinqueterre.html
@@ -38,7 +38,7 @@
     <main>
         <section class="project-hero">
             <div class="image-wrapper-fullwidth-cover">
-                <img src="img/webp/postage.webp" alt="placeholder" width="1920" height="1080" />
+                <img src="img/webp/cinque-terre-hero.webp" alt="placeholder" width="1920" height="1080" />
             </div>
         </section>
 
