edited meta description

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Angelica Palilio | Portfolio</title>
 
     <!-- META DESCRIPTION -->
-    <meta name="description" content="This is Web site called Site Name. If it were real, I would provde a description of it here, so that Google and other search engines, know what this website is all about.">
+    <meta name="description" content="This website is my coded portfolio site that (under construction)">
 
     <!-- META KEYWORDS -->
     <meta name="keywords" content="Web design, web development, ux, ui, frontend web development, html, css, javascript.">
