removed overlapping card on main index and change layout

--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
 
     <!-- MAIN CSS -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://use.typekit.net/dut3ivt.css">
 </head>
 
 <body>
