--- a/araw.html
+++ b/araw.html
@@ -13,8 +13,8 @@
     <!-- FOR RESPONSIVE DESIGN -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- MAIN CSS -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://use.typekit.net/dut3ivt.css">
 </head>
 
 <body>
