--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
     <!-- FOR RESPONSIVE DESIGN -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- ADOBE FONTS -->
+    <link rel="stylesheet" href="https://use.typekit.net/dut3ivt.css">
+
     <!-- MAIN CSS -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="https://use.typekit.net/dut3ivt.css">
+
 </head>
 
 <body>
@@ -56,54 +59,46 @@
 
         </section>
 
-        <section class="featured-works">
-            <h2 class="featured-works-heading">Featured Project</h2>
-            <div class="overlapping-cards">
-                <div class="ocard" data-index="0">
-                    <div class="inner-ocard">
-                        <div class="ocard-image-container">
-                            <a href="araw.html"><img class="ocard-image" src="img/webp/combined-sunscreen(resized).webp" alt="Sunscreen Image" width="1920" height="1280">
-                            </a>
-                            <div class="project-name">Araw</div>
-                        </div>
-                    </div>
-                </div>
-                <!-- <div class="ocard" data-index="0">
-                    <div class="inner-ocard">
-                        <div class="ocard-image-container">
-                            <a href="araw.html"><img class="ocard-image" src="img/webp/mug.webp" alt="The Resting Mug" width="1920" height="1280">
-                            </a>
-                            <div class="project-name">The Resting Mug</div>
-                        </div>
-
-                    </div>
-                </div> -->
-            </div>
-
         </section>
 
         <section class="works" id="works">
-            <h2 class="works-heading">Projects</h2>
+            <!-- <h2 class="works-heading">Projects</h2> -->
             <div class="works-grid">
+                <div class="works-project">
+                    <a href="araw.html"><img src="img/webp/baby-sunscreen.webp" alt="Image 4"></a>
+                    <p>Araw</p>
+                </div>
+                <div class="works-project light">
+                    <img src="" alt="Image 4">
+                    <p>Resting Mug</p>
+                </div>
                 <div class="works-project">
                     <a href="cinqueterre.html"><img class="ocard-image" src="img/webp/cinque-terre-logo-w-bg.webp" alt="Cinque Terre Logo" width="1920" height="1800">
                     </a>
                     <p>Cinque Terre</p>
                 </div>
-                <!-- <div class="works-project">
+                <div class="works-project">
                     <img src="img/webp/krishna-cow-logo-w-bg.webp" alt="Image 3">
                     <p>Krishna Cow Sanctuary</p>
-                </div> -->
+                </div>
                 <div class="works-project light">
                     <a href="charlesandrayeames.html"><img src="img/webp/eames-cover-photo.webp" alt="Image 2">
                     </a>
                     <p>Charles and Rae Eames Editorial</p>
                 </div>
 
-                <!-- <div class="works-project">
-                    <img src="image4.jpg" alt="Image 4">
+                <div class="works-project light">
+                    <img src="img/png/boozi-can.png" alt="Image 4">
                     <p>Boozi Hard Seltzer</p>
-                </div> -->
+                </div>
+            </div>
+
+            <div class="works-full">
+                <div class="works-project">
+                    <a href="charlesandrayeames.html"><img src="img/webp/combined-sunscreen.webp" alt="Image 2">
+                    </a>
+                </div>
+
             </div>
         </section>
 
@@ -164,12 +159,6 @@
         </div>
 
     </footer>
-
-    <!-- OVERLAPING CARD JS -->
-    <script src="js/aat.min.js"></script>
-
-    <!-- MAIN OCARD JS FILE -->
-    <script src="js/ocard.js"></script>
 
 </body>
 
