added full grid in index.html

--- a/index.html
+++ b/index.html
@@ -94,10 +94,11 @@
             </div>
 
             <div class="works-full">
-                <div class="works-project">
-                    <a href="charlesandrayeames.html"><img src="img/webp/combined-sunscreen.webp" alt="Image 2">
-                    </a>
-                </div>
+                <!-- <div class="works-project full"> -->
+                <a href="charlesandrayeames.html"><img src="img/webp/combined-sunscreen.webp" alt="Image 2">
+                </a>
+                <p>hello there</p>
+            </div>
 
             </div>
         </section>
